fix(main): 修复一处Sonar代码分析问题(Remove this use of "newInstance"; it is deprecated)